--- a/app/src/main/res/layout/forum_question.xml
+++ b/app/src/main/res/layout/forum_question.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_height="wrap_content"
@@ -13,12 +13,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:text="Please post your question"
             android:textStyle="bold"
             android:textSize="23sp"
-            android:textColor="#000000" />
+            android:textColor="#e23100" />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/question"
@@ -26,8 +28,11 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:layout_margin="5dp"
+            android:padding="10dp"
             android:id="@+id/forum_submit"
-            android:background="@color/colorPrimary"
+            android:layout_gravity="center"
+            android:background="@drawable/buttonlook"
             android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
