--- a/app/src/main/res/layout/refreshment_row_layout.xml
+++ b/app/src/main/res/layout/refreshment_row_layout.xml
@@ -32,32 +32,33 @@
         <TextView
             android:id="@+id/refreshment_type"
             android:text="LUNCH"
+            android:gravity="center"
             android:padding="15dp"
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/refreshment_qr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="192dp"
+            android:layout_height="64dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/refreshment_qr"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintVertical_bias="0.223" />
 
         <TextView
             android:id="@+id/date"
-            android:text="09/09/17"
+            android:gravity="center"
+            android:text="9 and 10th September"
             android:textSize="20sp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/refreshment_type"
-            android:layout_width="86dp"
-            android:layout_height="wrap_content"
+            android:layout_width="219dp"
+            android:layout_height="50dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="8dp"
